--- a/homepage.html
+++ b/homepage.html
@@ -8,26 +8,55 @@
 
 <body>
 <div class="wrapper">
-<div class="nav-bar">
-<ul>
+  <nav>
+    <div class="nav-bar">
+        <ul>
 
-<li><a href="#">Gmail</a></li>
-<li><a href="#">Mail</a></li>
-<li></li>
+  <li><a href="#">Gmail</a></li>
+  <li><a href="#">Mail</a></li>
+  <li><button type="submit" class="sign_in" > Sign in</button></li>
 
-</ul>
+        </ul>
+
+      </nav>
 
 
 </div>
+<section>
+<img src="images/Googlelogo.gif">
 
-<div class="search"
-<img src="/images/Googlelogo.gif">
+<div class="search">
+
 
 <input type="text" class="search_bar" placeholder="Search google or type URL">
-<button type="submit class="search_button"> Google Search </button>
-<button type="submit class="search_button"> I'm Feeling Lucky </button>
+
+<button type="submit" class="search_button" id="button"> Google Search </button>
+<button type="submit"class="search_button" id="button"> I'm Feeling Lucky </button>
 </div>
+</section>
+<footer>
+<div class="left-footer">
+<ul>
+
+  <li><a href="#">Advertising</a></li>
+  <li><a href="#">Business</a></li>
+  <li><a href="#">About</a></li>
 </div>
+
+  <div class="right-footer">
+  <li><a href="#">Mail</a></li>
+  <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+      <li><a href="#">Settings</a></li>
+
+
+    </ul>
+    </div>
+</div>
+</footer>
+</div>
+
+
 </body>
 
 
